[package]
name = "web_api"
version = "0.1.0"
authors = ["ykevinnow <ykevinnow@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6.1"
router = "0.6"
logger = "0.4"
env_logger = "0.7"
serde = { version = "1.0.106", features = ["derive"]}
serde_json = "1.0.51"
chrono = { version = "0.4.11", features = ["serde"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
